--- a/about.html
+++ b/about.html
@@ -6,8 +6,8 @@
     <title>My Personal Project</title>
 </head>
 <body>
-    <h1>My Personal Website</h1>
-    <p>Welcome to my personal little space on the web. </p>
+    <h1>About me</h1>
+    <p>some paragraph </p>
     <a href="./about.html">About me</a>
 </body>
 </html>
