--- a/about.html
+++ b/about.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Personal Project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>About me</h1>
-    <p>some paragraph </p>
-    <a href="./about.html">About me</a>
+    <div class="container">
+        <div class="column">
+        <h1>About me</h1>
+        <p>some paragraph </p>
+        <a href="./about.html">About me</a>
+        </div>
+    </div>
 </body>
 </html>
