--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Project</title>
-</head>
-<body>
-    <h1>My Personal Website</h1>
-    <p>Welcome to my personal little space on the web. </p>
-    <a href="./about.html">About me</a>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Personal Website</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="column">
+        <h1>My Personal Website</h1>
+        <p>Welcome to my personal little space on the web. 🌐</p>
+        <a href="./about.html">About me</a>
+      </div>
+      <div class="column">
+        <img src="https://github.com/dennisbochen.png" alt="" />
+      </div>
+    </div>
+  </body>
 </html>
