--- a/about.html
+++ b/about.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Project</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <div class="column">
-        <h1>About me</h1>
-        <p>some paragraph </p>
-        <a href="./about.html">About me</a>
-        </div>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Personal Website</title>
+  </head>
+  <body>
+    <h1>About Me 👨</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro asperiores
+      odit fuga laboriosam necessitatibus cum facilis magnam facere, totam
+      numquam in repellat assumenda iusto nesciunt? Eum et delectus nostrum
+      dolorum voluptatem. Ratione, soluta officiis at quos laboriosam qui
+      consequuntur provident quibusdam eius ipsum commodi nihil cum, iure dolor
+      aut nulla eligendi facilis, adipisci ad a consectetur culpa doloribus?
+      Nulla, culpa velit? Unde asperiores necessitatibus esse veniam rerum quam
+      culpa sed veritatis est quisquam omnis, quod repellendus molestias vero at
+      minima odit. Aspernatur accusamus voluptatibus cum, numquam esse assumenda
+      nemo explicabo laborum quibusdam officiis animi nihil corporis vitae rerum
+      modi. Laudantium!
+    </p>
+  </body>
 </html>
