--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="./about.html">About me</a>
       </div>
       <div class="column">
-        <img src="https://github.com/dennisbochen.png" alt="" />
+        <img src="https://github.com/zaraayvazyan9.png" alt="" />
       </div>
     </div>
   </body>
