--- a/about.html
+++ b/about.html
@@ -5,20 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Personal Website</title>
   </head>
-  <body>
-    <h1>About Me 👨</h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro asperiores
-      odit fuga laboriosam necessitatibus cum facilis magnam facere, totam
-      numquam in repellat assumenda iusto nesciunt? Eum et delectus nostrum
-      dolorum voluptatem. Ratione, soluta officiis at quos laboriosam qui
-      consequuntur provident quibusdam eius ipsum commodi nihil cum, iure dolor
-      aut nulla eligendi facilis, adipisci ad a consectetur culpa doloribus?
-      Nulla, culpa velit? Unde asperiores necessitatibus esse veniam rerum quam
-      culpa sed veritatis est quisquam omnis, quod repellendus molestias vero at
-      minima odit. Aspernatur accusamus voluptatibus cum, numquam esse assumenda
-      nemo explicabo laborum quibusdam officiis animi nihil corporis vitae rerum
-      modi. Laudantium!
-    </p>
-  </body>
-</html>
+   <body>
+       <h1>About Me 👧🏻</h1>
+       <div>
+           <h2>Zara Ayvazyan</h2>
+           <h4>AGILE SCRUM MASTER</h4>
+           <h5>02/2011 - 09/2016</h5>
+           <h5>Munich, Germany</h5>
+       </div>       
+        <ul>
+            <li>3+ years of professional experience as a Scrum Master</li>
+            <li>Collaborative work in agile teams</li>
+            <li>Development teams management experience</li>
+            <li>Good understanding of IT and a good knowledge of the software development cycle. </li>
+            <li>Planining and organize meetings, demos</li>
+            <li>Monitoring and tracking sprints (user stories, epics)</li>
+            <li>Issues and risk control</li>
+        </ul>
+        <div>
+            <p>
+                <br>-Challenge the old norms of development in order to improve performance in the areas of quality, predictability, flow and velocity
+                <br>-Facilitates Agile ceremonies such as the Daily Stand-up, Iteration Planning, Iteration Reviews and Demos, and Iteration Retrospective
+                <br>-Responsible for ensuring Scrum is understood and enacted by helping the Scrum Team adhere to Scrum theory, practices, and rules
+                <br>-Removing impediments to the Development Team’s progress
+                <br>-Supporting Teams with Definition of Ready & Definition of Done
+                <br>-Coaching the Development Teams in organisational environments in which Scrum is not yet fully adopted and understood.. etc</br></br></br></br></br></br>
+            </p>
+
+        </div>
+    </body>
+    </html>
+
+
