--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
        <div>
            <h2>Zara Ayvazyan</h2>
            <h4>AGILE SCRUM MASTER</h4>
-           <h5>02/2011 - 09/2016</h5>
+           <h5>June 2017 - Present</h5>
            <h5>Munich, Germany</h5>
        </div>       
         <ul>
