Add normalize.css Add new styles

--- a/about.html
+++ b/about.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Personal Website</title>
-  </head>
-   <body>
-       <h1>About Me 👧🏻</h1>
-       <div>
-           <h2>Zara Ayvazyan</h2>
-           <h4>AGILE SCRUM MASTER</h4>
-           <h5>June 2017 - Present</h5>
-           <h5>Munich, Germany</h5>
-       </div>       
-        <ul>
-            <li>3+ years of professional experience as a Scrum Master</li>
-            <li>Collaborative work in agile teams</li>
-            <li>Development teams management experience</li>
-            <li>Good understanding of IT and a good knowledge of the software development cycle. </li>
-            <li>Planining and organize meetings, demos</li>
-            <li>Monitoring and tracking sprints (user stories, epics)</li>
-            <li>Issues and risk control</li>
-        </ul>
-        <div>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <title>My Personal Website</title>
+      <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+       <div class="container">
+           <div class="column">
+               <h1>About Me 👧🏻</h1>
+               <h2>Zara Ayvazyan</h2>
+               <h4>AGILE SCRUM MASTER</h4>
+               <h5>June 2017 - Present</h5>
+               <h5>Munich, Germany</h5>
+            </div>
+            <ul>
+                <li>3+ years of professional experience as a Scrum Master</li>
+                <li>Collaborative work in agile teams</li>
+                <li>Development teams management experience</li>
+                <li>Good understanding of IT and a good knowledge of the software development cycle.</li>
+                <li>Planining and organize meetings, demos</li>
+                <li>Monitoring and tracking sprints (user stories, epics)</li>
+                <li>Issues and risk control</li>
+            </ul>
             <p>
                 <br>-Challenge the old norms of development in order to improve performance in the areas of quality, predictability, flow and velocity
                 <br>-Facilitates Agile ceremonies such as the Daily Stand-up, Iteration Planning, Iteration Reviews and Demos, and Iteration Retrospective
                 <br>-Responsible for ensuring Scrum is understood and enacted by helping the Scrum Team adhere to Scrum theory, practices, and rules
                 <br>-Removing impediments to the Development Team’s progress
-                <br>-Supporting Teams with Definition of Ready & Definition of Done
+                <br>-Supporting Teams with Definition of Ready & Definition of Development
                 <br>-Coaching the Development Teams in organisational environments in which Scrum is not yet fully adopted and understood.. etc</br></br></br></br></br></br>
             </p>
-
-        </div>
+       </div>
     </body>
-    </html>
+</html>
 
 
