--- a/index.html
+++ b/index.html
@@ -5,17 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Personal Website</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="normalize.css">
   </head>
   <body>
+      <nav>
+          <div class="wrapper">
+              <ul>
+                  <li><a href="./about.html">Introduction</a></li>
+                  <li>Education</li>
+                  <li>Skills</li>
+                  <li>Hobbies</li>
+                </ul>
+            </div>
+        </nav>
+        
     <div class="container">
-      <div class="column">
-        <h1>My Personal Website</h1>
-        <p>Welcome to my personal little space on the web. 🌐</p>
-        <a href="./about.html">About me</a>
-      </div>
-      <div class="column">
-        <img src="https://github.com/zaraayvazyan9.png" alt="" />
-      </div>
+        <div class="column">
+            <img src="https://github.com/zaraayvazyan9.png" alt="" />
+        </div>
+
+        <div class="column">
+            <h1>Welcome to Personal Website</h1>
+            <p>Hello, My name is Zara Ayvazyan 🌐</p>
+            <p>I'm a ReDi Student. I've joint ReDi on March 2020.
+                <br>I'm glad I've got a chance to participate in Frontend Development course.</br>
+                <br>
+                <iframe width="485" height="275" src="https://media.giphy.com/media/3o6MbpTYwxxoivFBiE/source.gif">
+                </iframe></br></p>
+        </div>
     </div>
   </body>
+  <footer>COPYRIGHT © 2020 ZaraAyvazyan</footer>
 </html>
