--- a/about.html
+++ b/about.html
@@ -14,24 +14,24 @@
                <h4>AGILE SCRUM MASTER</h4>
                <h5>June 2017 - Present</h5>
                <h5>Munich, Germany</h5>
+               <ul>
+                   <li>3+ years of professional experience as a Scrum Master</li>
+                   <li>Collaborative work in agile teams</li>
+                   <li>Development teams management experience</li>
+                   <li>Good understanding of IT and a good knowledge of the software development cycle.</li>
+                   <li>Planining and organize meetings, demos</li>
+                   <li>Monitoring and tracking sprints (user stories, epics)</li>
+                   <li>Issues and risk control</li>
+                </ul>
+                <p>
+                    <br>-Challenge the old norms of development in order to improve performance in the areas of quality, predictability, flow and velocity
+                    <br>-Facilitates Agile ceremonies such as the Daily Stand-up, Iteration Planning, Iteration Reviews and Demos, and Iteration Retrospective
+                    <br>-Responsible for ensuring Scrum is understood and enacted by helping the Scrum Team adhere to Scrum theory, practices, and rules
+                    <br>-Removing impediments to the Development Team’s progress
+                    <br>-Supporting Teams with Definition of Ready & Definition of development
+                    <br>-Coaching the Development Teams in organisational environments in which Scrum is not yet fully adopted and understood.. etc</br></br></br></br></br></br>
+                </p>
             </div>
-            <ul>
-                <li>3+ years of professional experience as a Scrum Master</li>
-                <li>Collaborative work in agile teams</li>
-                <li>Development teams management experience</li>
-                <li>Good understanding of IT and a good knowledge of the software development cycle.</li>
-                <li>Planining and organize meetings, demos</li>
-                <li>Monitoring and tracking sprints (user stories, epics)</li>
-                <li>Issues and risk control</li>
-            </ul>
-            <p>
-                <br>-Challenge the old norms of development in order to improve performance in the areas of quality, predictability, flow and velocity
-                <br>-Facilitates Agile ceremonies such as the Daily Stand-up, Iteration Planning, Iteration Reviews and Demos, and Iteration Retrospective
-                <br>-Responsible for ensuring Scrum is understood and enacted by helping the Scrum Team adhere to Scrum theory, practices, and rules
-                <br>-Removing impediments to the Development Team’s progress
-                <br>-Supporting Teams with Definition of Ready & Definition of Development
-                <br>-Coaching the Development Teams in organisational environments in which Scrum is not yet fully adopted and understood.. etc</br></br></br></br></br></br>
-            </p>
        </div>
     </body>
 </html>
