--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         </div>
 
         <div class="column">
-            <h1>Welcome to Personal Website</h1>
-            <p>Hello, My name is Zara Ayvazyan 🌐</p>
+            <h1>Welcome to my Personal Website</h1>
+            <p>Hello, My name is Zara Ayvazyan.</p>
             <p>I'm a ReDi Student. I've joint ReDi on March 2020.
                 <br>I'm glad I've got a chance to participate in Frontend Development course.</br>
                 <br>
-                <iframe width="485" height="275" src="https://media.giphy.com/media/3o6MbpTYwxxoivFBiE/source.gif">
+                <iframe width="485" height="275" src="https://i.giphy.com/media/3o6MbpTYwxxoivFBiE/source.gif">
                 </iframe></br></p>
         </div>
     </div>
