--- a/index.html
+++ b/index.html
@@ -20,19 +20,26 @@
         </nav>
         
     <div class="container">
-        <div class="column">
+        <div class="column1">
             <img src="https://github.com/zaraayvazyan9.png" alt="" />
         </div>
 
-        <div class="column">
-            <h1>Welcome to my Personal Website</h1>
-            <p>Hello, My name is Zara Ayvazyan.</p>
-            <p>I'm a ReDi Student. I've joint ReDi on March 2020.
-                <br>I'm glad I've got a chance to participate in Frontend Development course.</br>
-                <br>
-                <iframe width="485" height="275" src="https://i.giphy.com/media/3o6MbpTYwxxoivFBiE/source.gif">
-                </iframe></br></p>
+        <div class="column2">
+            <h2>Zara Ayvazyan</h2>
+            <h4>Scrum Master</h4>
+            <h6>June 2017 - Present</h6>
+            <h6>Munich, Germany</h6>
         </div>
+        <div class="listing">
+            <ul>
+                <li>3+ years of professional experience as a Scrum Master</li>
+                <li>Facilitating Agile ceremonies</li>
+                <li>Removing impediments to the Development Team’s progress</li>
+                <li>Coaching the Development Teams in organizational environments in which Scrum is not yet fully adopted and understood .. etc</li>
+              </ul>
+
+        </div>
+        
     </div>
   </body>
   <footer>COPYRIGHT © 2020 ZaraAyvazyan</footer>
