add social icons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         
     <div class="container">
         <div class="column1">
-            <img src="https://github.com/zaraayvazyan9.png" alt="" />
+            <img src="https://github.com/zaraayvazyan9.png" alt="Profile Picture" />
         </div>
 
         <div class="column2">
@@ -37,9 +37,12 @@
                 <li>Removing impediments to the Development Team’s progress</li>
                 <li>Coaching the Development Teams in organizational environments in which Scrum is not yet fully adopted and understood .. etc</li>
               </ul>
-
         </div>
-        
+        <div class="icons">
+            <a href="https://github.com/zaraayvazyan9/"><img src="./images/github_logo.png" alt="GitHub Logo"/> </a>
+            <a href="https://de.linkedin.com/in/zara-ayvazyan"><img src="./images/linkedin_logo.png" alt="Linkedin Logo"/></a>
+            <a href="https://www.xing.com/profile/Zara_Ayvazyan"><img src="./images/xing_logo.png" alt="Xing Logo"/></a>
+        </div>
     </div>
   </body>
   <footer>COPYRIGHT © 2020 ZaraAyvazyan</footer>
