--- a/index.html
+++ b/index.html
@@ -18,32 +18,34 @@
                 </ul>
             </div>
         </nav>
-        
-    <div class="container">
-        <div class="column1">
-            <img src="https://github.com/zaraayvazyan9.png" alt="Profile Picture" />
-        </div>
-
-        <div class="column2">
-            <h2>Zara Ayvazyan</h2>
-            <h4>Scrum Master</h4>
-            <h6>June 2017 - Present</h6>
-            <h6>Munich, Germany</h6>
-        </div>
-        <div class="listing">
-            <ul>
-                <li>3+ years of professional experience as a Scrum Master</li>
-                <li>Facilitating Agile ceremonies</li>
-                <li>Removing impediments to the Development Team’s progress</li>
-                <li>Coaching the Development Teams in organizational environments in which Scrum is not yet fully adopted and understood .. etc</li>
+        <div class="container">
+            <div class="column1">
+                <img src="https://github.com/zaraayvazyan9.png" alt="Profile Picture" />
+            </div>
+            <div class="column2">
+                <h2>Zara Ayvazyan</h2>
+                <h4>Scrum Master</h4>
+                <h6>June 2017 - Present</h6>
+                <h6>Munich, Germany</h6>
+            </div>
+            <div class="listing">
+                <ul>
+                    <li>3+ years of professional experience as a Scrum Master</li>
+                    <li>Facilitating Agile ceremonies</li>
+                    <li>Removing impediments to the Development Team’s progress</li>
+                    <li>Coaching the Development Teams in organizational environments in which Scrum is not yet fully adopted and understood .. etc</li>
               </ul>
+            </div>
+            <div class="icons">
+                <a href="https://github.com/zaraayvazyan9/"><img src="./images/github_logo.png" alt="GitHub Logo"/> </a>
+                <a href="https://de.linkedin.com/in/zara-ayvazyan"><img src="./images/linkedin_logo.png" alt="Linkedin Logo"/></a>
+                <a href="https://www.xing.com/profile/Zara_Ayvazyan"><img src="./images/xing_logo.png" alt="Xing Logo"/></a>
+            </div>
         </div>
-        <div class="icons">
-            <a href="https://github.com/zaraayvazyan9/"><img src="./images/github_logo.png" alt="GitHub Logo"/> </a>
-            <a href="https://de.linkedin.com/in/zara-ayvazyan"><img src="./images/linkedin_logo.png" alt="Linkedin Logo"/></a>
-            <a href="https://www.xing.com/profile/Zara_Ayvazyan"><img src="./images/xing_logo.png" alt="Xing Logo"/></a>
+    </body>
+    <footer>
+        <div class="wrapper">
+            © 2020 ZaraAyvazyan
         </div>
-    </div>
-  </body>
-  <footer>COPYRIGHT © 2020 ZaraAyvazyan</footer>
+    </footer>
 </html>
